@@ -380,7 +380,7 @@ exec 6>&1
 # report actual input values of CONFIG_FILES etc. instead of their
 # values after options handling.
 ac_log="
-This file was extended by lmdb $as_me 0.3, which was
+This file was extended by lmdb $as_me 0.3.1, which was
 generated by GNU Autoconf 2.69.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -419,7 +419,7 @@ Report bugs to the package provider."
 
 ac_cs_config=""
 ac_cs_version="\
-lmdb config.status 0.3
+lmdb config.status 0.3.1
 configured by ./configure, generated by GNU Autoconf 2.69,
   with options \"$ac_cs_config\"
 
@@ -663,8 +663,8 @@ S["PKG_HEADERS"]=""
 S["PKG_TCL_SOURCES"]=""
 S["PKG_STUB_OBJECTS"]=""
 S["PKG_STUB_SOURCES"]=""
-S["PKG_STUB_LIB_FILE"]="liblmdbstub0.3.a"
-S["PKG_LIB_FILE"]="liblmdb0.3.so"
+S["PKG_STUB_LIB_FILE"]="liblmdbstub0.3.1.a"
+S["PKG_LIB_FILE"]="liblmdb0.3.1.so"
 S["EXEEXT"]=""
 S["CYGPATH"]="echo"
 S["target_alias"]=""
@@ -674,11 +674,11 @@ S["LIBS"]=""
 S["ECHO_T"]=""
 S["ECHO_N"]="-n"
 S["ECHO_C"]=""
-S["DEFS"]="-DPACKAGE_NAME=\\\"lmdb\\\" -DPACKAGE_TARNAME=\\\"lmdb\\\" -DPACKAGE_VERSION=\\\"0.3\\\" -DPACKAGE_STRING=\\\"lmdb\\ 0.3\\\" -DPACKAGE_BUGREPORT=\\\"\\\" -DPACKAGE_URL=\\"\
-"\"\\\" -DBUILD_lmdb=/\\*\\*/ -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRIN"\
-"GS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_LIMITS_H=1 -DHAVE_SYS_PARAM_H=1 -DUSE_THREAD_ALLOC=1 -D_REENTRANT=1 -D_THREAD_"\
-"SAFE=1 -DTCL_THREADS=1 -DMODULE_SCOPE=extern\\ __attribute__\\(\\(__visibility__\\(\\\"hidden\\\"\\)\\)\\) -DHAVE_HIDDEN=1 -DHAVE_CAST_TO_UNION=1 -D_LARGEFILE6"\
-"4_SOURCE=1 -DTCL_WIDE_INT_IS_LONG=1 -DUSE_TCL_STUBS=1"
+S["DEFS"]="-DPACKAGE_NAME=\\\"lmdb\\\" -DPACKAGE_TARNAME=\\\"lmdb\\\" -DPACKAGE_VERSION=\\\"0.3.1\\\" -DPACKAGE_STRING=\\\"lmdb\\ 0.3.1\\\" -DPACKAGE_BUGREPORT=\\\"\\\" -DPACKAGE_U"\
+"RL=\\\"\\\" -DBUILD_lmdb=/\\*\\*/ -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_S"\
+"TRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_LIMITS_H=1 -DHAVE_SYS_PARAM_H=1 -DUSE_THREAD_ALLOC=1 -D_REENTRANT=1 -D_THR"\
+"EAD_SAFE=1 -DTCL_THREADS=1 -DMODULE_SCOPE=extern\\ __attribute__\\(\\(__visibility__\\(\\\"hidden\\\"\\)\\)\\) -DHAVE_HIDDEN=1 -DHAVE_CAST_TO_UNION=1 -D_LARGEF"\
+"ILE64_SOURCE=1 -DTCL_WIDE_INT_IS_LONG=1 -DUSE_TCL_STUBS=1"
 S["mandir"]="${datarootdir}/man"
 S["localedir"]="${datarootdir}/locale"
 S["libdir"]="${exec_prefix}/lib64"
@@ -703,8 +703,8 @@ S["prefix"]="/usr"
 S["exec_prefix"]="/usr"
 S["PACKAGE_URL"]=""
 S["PACKAGE_BUGREPORT"]=""
-S["PACKAGE_STRING"]="lmdb 0.3"
-S["PACKAGE_VERSION"]="0.3"
+S["PACKAGE_STRING"]="lmdb 0.3.1"
+S["PACKAGE_VERSION"]="0.3.1"
 S["PACKAGE_TARNAME"]="lmdb"
 S["PACKAGE_NAME"]="lmdb"
 S["PATH_SEPARATOR"]=":"
