@@ -1,5 +1,5 @@
 #
 # Tcl package index file
 #
-package ifneeded lmdb 0.3 \
-    [list load [file join $dir liblmdb0.3.so] lmdb]
+package ifneeded lmdb 0.3.1 \
+    [list load [file join $dir liblmdb0.3.1.so] lmdb]
