@@ -1,5 +1,7 @@
 2016-01-30  Danilo Chang  <ray2501@gmail.com>
 
+    * Setup version to v0.3.1 to test.
+    * README.md: add -dupfixed option example
     * generic/lmdb.h: Update source code.
     * generic/mdb.c: Update source code.
       Fix MDB_VL32 mdb_cursor_count()/entrycount types
